Changelog
=========

* display local channels only in the local newsletter form
  [naro]

* make local collectors working. This requires activating of overrides.zcml 
  with custom collector vocabulary. There are both, local and global, collectors 
  listed.
  [naro]

0.3 - first PyPi release
------------------------

* fix up various views to acommodate local configuration
  [ramonski]

* fix nasty bug where local channels loose their acquired request
  [seletz]

* add global IChannelLookup utility which in turn looks for local
  ILocalNewsletterLookup utilities. The latter are then registered
  for dancefloor-enabled folders, which provide ISite
  [seletz]

0.2 - Unreleased
----------------

* local utility for channel lookup added [seletz]

0.1 - Unreleased
----------------

* schema extender for enabling local newsletter functionality
  added [rbartl]
